feat(app): replace clock bundle with new microapp clock

--- a/app/src/bundles/App/NavigationBundle/Styles/NavigationGrid.styles.scss
+++ b/app/src/bundles/App/NavigationBundle/Styles/NavigationGrid.styles.scss
@@ -1,5 +1,7 @@
 .NavigationGrid {
   display: flex;
+  align-items: center;
+  gap: 6px;
   width: 100vw;
   height: 28px;
   background-color: var(--background-color);
