fix(ds): modal - small fixes after review

--- a/core/design-system/src/components/ds-modal/modal-header/modal-header.module.scss
+++ b/core/design-system/src/components/ds-modal/modal-header/modal-header.module.scss
@@ -4,6 +4,9 @@
 	align-items: center;
 	height: 20px;
 	padding: 3px 2px 3px 3px;
-	color: var(--text-color-2);
 	background: var(--background-color-modal-header);
+}
+
+.header > h3 {
+	color: var(--text-color-2);
 }
