--- a/core/design-system/src/components/ds-modal/ds-modal.module.scss
+++ b/core/design-system/src/components/ds-modal/ds-modal.module.scss
@@ -1,6 +1,12 @@
-.resize-window {
-	resize: both;
-	overflow: auto;
+.modal {
+	background-color: transparent;
+    border: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.modal::backdrop {
+	background-color: transparent;
 }
 
 .move-window {
@@ -9,3 +15,20 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+.container {
+	padding: 3px;
+	min-height: 110px;
+	min-width: 190px;
+	max-width: 100%;
+	max-height: 100%;
+	background-color: var(--background-color);
+	box-shadow: var(--box-shadow-raised);
+}
+
+.resize-window {
+	resize: both;
+	overflow: auto;
+}
+
+  
