--- a/core/design-system/src/styles/utils/font-face.util.scss
+++ b/core/design-system/src/styles/utils/font-face.util.scss
@@ -3,8 +3,7 @@ $src-ms-sans-serif-medium: '/fonts/#{$ms-sans-serif-medium}';
 
 @font-face {
   font-family: $ms-sans-serif-medium;
-  src: url('#{$src-ms-sans-serif-medium}.woff') format('woff'),
-    url('#{$src-ms-sans-serif-medium}.woff2') format('woff2');
+  src: url('#{$src-ms-sans-serif-medium}.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -15,8 +14,7 @@ $src-ms-sans-serif-bold: '/fonts/#{$ms-sans-serif-bold}';
 
 @font-face {
   font-family: $ms-sans-serif-bold;
-  src: url('#{$src-ms-sans-serif-bold}.woff') format('woff'),
-    url('#{$src-ms-sans-serif-bold}.woff2') format('woff2');
+  src: url('#{$src-ms-sans-serif-bold}.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
