--- a/core/design-system/src/components/ds-select/ds-select.module.scss
+++ b/core/design-system/src/components/ds-select/ds-select.module.scss
@@ -1,5 +1,18 @@
 .wrapper {
   position: relative;
+  display: flex;
+}
+
+.wrapper-horizontal {
+	align-items: center;
+	column-gap: 6px;
+}
+
+.wrapper-vertical {
+	flex-direction: column;
+	align-items: flex-start;
+	row-gap: 5px;
+	max-width: 200px;
 }
 
 .label {
@@ -10,8 +23,6 @@
 .select {
   height: 21px;
   width: 100%;
-  background: var(--background-color-white) url('/icons/select-button.svg')
-    no-repeat top 2px right 2px;
   box-shadow: var(--border-field);
   padding: 5px 25px 5px 5px;
   color: var(--text-color);
@@ -20,6 +31,14 @@
 
 .arrow {
   position: absolute;
-  right: 1px;
+  right: 2px;
+  z-index: -1;
+}
+
+.arrow-vertical {
+  bottom: -2px;
+}
+
+.arrow-horizontal {
   top: 2px;
 }
