--- a/micro-frontends/src/mf-save-file/src/ui/modules/modal/modal.module.scss
+++ b/micro-frontends/src/mf-save-file/src/ui/modules/modal/modal.module.scss
@@ -1,7 +1,9 @@
 .wrapper {
+    align-items: center;
 	display: grid;
     grid-template-rows: repeat(2, 20px);
     grid-template-columns: 75% 25%;
-    gap: 8px 0;
-    padding: 15px 5px;
+    gap: 8px 4px;
+    justify-content: center;
+    padding: 10px 5px;
 }
