--- a/core/design-system/src/components/ds-modal/ds-modal.module.scss
+++ b/core/design-system/src/components/ds-modal/ds-modal.module.scss
@@ -17,6 +17,10 @@
 }
 
 .container {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	padding: 3px;
 	min-height: 110px;
 	min-width: 190px;
