refactor(mf): start-menu - panel item

--- a/micro-frontends/src/mf-start-menu/src/ui/modules/panel-item/wrapper/wrapper.module.scss
+++ b/micro-frontends/src/mf-start-menu/src/ui/modules/panel-item/wrapper/wrapper.module.scss
@@ -1,20 +1,33 @@
 .panel-item-wrapper {
-  background-color: var(--background-color);
-  border-top: 1px solid var(--border-color-navigation);
-  border-left: 1px solid var(--border-color-navigation);
-  border-right: 1px solid $cl-black;
-  border-bottom: 1px solid $cl-black;
-  min-width: 140px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 5px;
+  min-width: 135px;
+
+  &:hover {
+    @include hover {
+      background-color: $cl-blue33;
+
+      * p {
+        color: var(--text-color-2);
+      }
+    }
+  }
 }
 
-.variant-primary {
-    position: fixed;
-    bottom: 26px;
-    left: 2px;
-}
+.type-group {
+  position: relative;
 
-.variant-secondary {
-    position: absolute;
-    top: -1px;
-    left: 100%;
+  &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: 5px;
+      transform: translateY(-50%);
+      border-top: 4px solid transparent;
+      border-bottom: 4px solid transparent;
+      border-left: 4px solid $cl-black;
+    }
 }
