--- a/micro-frontends/src/mf-start-menu/src/ui/modules/panel/panel.module.scss
+++ b/micro-frontends/src/mf-start-menu/src/ui/modules/panel/panel.module.scss
@@ -4,16 +4,16 @@
   border-left: 1px solid var(--border-color-navigation);
   border-right: 1px solid $cl-black;
   border-bottom: 1px solid $cl-black;
-  min-width: 140px;
+  max-width: 140px;
 }
 
-.variant-primary {
+.panel-primary {
     position: fixed;
     bottom: 26px;
     left: 2px;
 }
 
-.variant-secondary {
+.panel-secondary {
     position: absolute;
     top: -1px;
     left: 100%;
