--- a/micro-frontends/src/mf-start-menu/src/ui/modules/menu-items/menu-items.module.scss
+++ b/micro-frontends/src/mf-start-menu/src/ui/modules/menu-items/menu-items.module.scss
@@ -1,4 +1,4 @@
-.panel {
+.menu-items-wrapper {
   background-color: var(--background-color);
   border-top: 1px solid var(--border-color-navigation);
   border-left: 1px solid var(--border-color-navigation);
@@ -7,14 +7,14 @@
   max-width: 140px;
 }
 
-.panel-primary {
-    position: fixed;
-    bottom: 26px;
-    left: 2px;
+.variant-primary {
+  position: fixed;
+  bottom: 26px;
+  left: 2px;
 }
 
-.panel-secondary {
-    position: absolute;
-    top: -1px;
-    left: 100%;
+.variant-secondary {
+  position: absolute;
+  top: -1px;
+  left: 100%;
 }
