fix(mf): start-menu - wrapper hover in ui

--- a/micro-frontends/src/mf-start-menu/src/ui/modules/menu-item/wrapper/wrapper.module.scss
+++ b/micro-frontends/src/mf-start-menu/src/ui/modules/menu-item/wrapper/wrapper.module.scss
@@ -10,7 +10,7 @@
     @include hover {
       background-color: $cl-blue33;
 
-      * p {
+      & > div > p {
         color: var(--text-color-2);
       }
     }
