fix(mf): tic-tac-toe - replace static colours with variables

--- a/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/board/board-item/board-item.module.scss
+++ b/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/board/board-item/board-item.module.scss
@@ -26,13 +26,11 @@
 }
 
 .color-blue {
-    // @TODO: Move this color during implementation panda css
-    color: #0000ff;
+    color: $cl-blue00;
 }
 
 .color-red {
-    // @TODO: Move this color during implementation panda css
-    color: #fe0000;
+    color: $cl-red;
 }
 
 .color-black {
