--- a/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/player-sign/player-sign.module.scss
+++ b/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/player-sign/player-sign.module.scss
@@ -10,11 +10,9 @@
 }
 
 .variant-computer {
-    // @TODO: Move this color during implementation panda css
-    color: #0000ff;
+    color: $cl-blue00;
 }
 
 .variant-human {
-    // @TODO: Move this color during implementation panda css
-    color: #fe0000;
+    color: $cl-red;
 }
