fix(mf): tic-tac-toe - sign colours on the board in ui

--- a/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/player-sign/player-sign.module.scss
+++ b/micro-frontends/src/mf-tic-tac-toe/src/ui/modules/game/player-sign/player-sign.module.scss
@@ -9,10 +9,10 @@
     @include font('bold', 17, 17);
 }
 
-.variant-computer {
+.sign-o {
     color: $cl-blue00;
 }
 
-.variant-human {
+.sign-x {
     color: $cl-red;
 }
