fix(mf): navigation - styles

--- a/micro-frontends/src/mf-navigation/src/ui/modules/wrapper/wrapper.module.scss
+++ b/micro-frontends/src/mf-navigation/src/ui/modules/wrapper/wrapper.module.scss
@@ -8,4 +8,8 @@
   border-top: 1px solid var(--border-color-navigation);
   outline: 1px solid var(--background-color);
   padding: 3px;
+
+  & > *:first-child {
+    margin-right: auto;
+  }
 }
