--- a/core/design-system/src/styles/theme-light.css
+++ b/core/design-system/src/styles/theme-light.css
@@ -1,15 +1,15 @@
 @layer theme-light {
 	:root[theme="light"] {
-		--ds-background-primary: var(--ds-color-grey800);
-		--ds-background-secondary: var(--ds-color-grey100);
-		--ds-background-modal-header: linear-gradient(
+		--ds-background-color-primary: var(--ds-color-grey800);
+		--ds-background-color-secondary: var(--ds-color-grey100);
+		--ds-background-color-modal-header: linear-gradient(
 			90deg,
 			var(--ds-color-blue200),
 			var(--ds-color-blue300)
 		);
-		--ds-background-pulpit: var(--ds-color-blue400);
+		--ds-background-color-pulpit: var(--ds-color-blue400);
 
-		--ds-text-primary: var(--ds-color-black300);
+		--ds-text-color-primary: var(--ds-color-black300);
 
 		--ds-border-primary: var(--ds-color-grey300);
 		--ds-border-secondary: var(--ds-color-grey400);
