style(ds): button - spacings

--- a/core/design-system/src/components/ds-button/ds-button.module.css
+++ b/core/design-system/src/components/ds-button/ds-button.module.css
@@ -29,20 +29,16 @@
 .size-small {
 	width: 16px;
 	height: 14px;
-	padding: 1px;
+	padding: var(--ds-spacing-2xs);
 }
 
 .size-medium {
 	height: 23px;
 	min-width: 75px;
-	padding: 0 12px;
+	padding: var(--ds-spacing-0) var(--ds-spacing-2xl);
 
 	&:focus {
 		outline: 1px dotted var(--ds-color-black100);
 		outline-offset: -4px;
-	}
-
-	&:not(:disabled):active {
-		padding: 2px 11px 0 13px;
 	}
 }
