--- a/core/design-system/src/styles/theme-light.css
+++ b/core/design-system/src/styles/theme-light.css
@@ -1,7 +1,7 @@
 @layer theme-light {
 	:root[theme="light"] {
 		--ds-background-color-primary: var(--ds-color-grey800);
-		--ds-background-color-secondary: var(--ds-color-grey100);
+		--ds-background-color-secondary: var(--ds-color-white100);
 		--ds-background-color-modal-header: linear-gradient(
 			90deg,
 			var(--ds-color-blue200),
@@ -10,10 +10,24 @@
 		--ds-background-color-pulpit: var(--ds-color-blue400);
 
 		--ds-text-color-primary: var(--ds-color-black300);
+		--ds-text-color-secondary: var(--ds-color-white100);
 
-		--ds-border-primary: var(--ds-color-grey300);
-		--ds-border-secondary: var(--ds-color-grey400);
-		--ds-border-navigation: var(--ds-color-white100);
+		--ds-border-color-primary: rgba(255, 255, 255, 0.7);
+		--ds-border-color-secondary: var(--ds-color-grey400);
+		--ds-border-color-navigation: var(--ds-color-white100);
+
+		--ds-border-field-inner: inset -1px -1px var(--ds-color-white100), inset 1px
+			1px var(--ds-color-grey200);
+		--ds-border-field-outer: inset -2px -2px var(--ds-color-grey900), inset 2px
+			2px var(--ds-color-black200);
+		--ds-border-raised-inner: inset -1px -1px var(--ds-color-black200), inset
+			1px 1px var(--ds-color-white100);
+		--ds-border-raised-outer: inset -2px -2px var(--ds-color-grey200), inset 2px
+			2px var(--ds-color-grey900);
+		--ds-border-sunken-inner: inset -1px -1px var(--ds-color-white100), inset
+			1px 1px var(--ds-color-black200);
+		--ds-border-sunken-outer: inset -2px -2px var(--ds-color-grey900), inset 2px
+			2px var(--ds-color-grey200);
 
 		--ds-border-field: var(--ds-border-field-inner),
 			var(--ds-border-field-outer);
@@ -21,10 +35,5 @@
 			var(--ds-border-raised-outer);
 		--ds-border-sunken: var(--ds-border-sunken-inner),
 			var(--ds-border-sunken-outer);
-
-		--ds-shadow-raised: var(--ds-border-raised-outer),
-			var(--ds-border-raised-inner);
-		--ds-shadow-sunken: var(--ds-border-sunken-outer),
-			var(--ds-border-sunken-inner);
 	}
 }
