--- a/core/design-system/src/components/ds-frame/ds-frame.module.css
+++ b/core/design-system/src/components/ds-frame/ds-frame.module.css
@@ -3,8 +3,8 @@
 	position: relative;
 	border: 1px solid var(--ds-border-color-primary);
 	outline: 1px solid var(--ds-border-color-secondary);
-	padding: var(--ds-spacing-md) var(--ds-spacing-sm);
-	margin: var(--ds-spacing-md) var(--ds-spacing-sm);
+	padding: var(--ds-spacing-lg) var(--ds-spacing-md);
+	margin: var(--ds-spacing-xl);
 }
 
 .title {
