--- a/core/design-system/src/components/ds-button/ds-button.module.css
+++ b/core/design-system/src/components/ds-button/ds-button.module.css
@@ -18,7 +18,7 @@
 
 	&:disabled {
 		pointer-events: none;
-		opacity: 0.5;
+		opacity: var(--ds-opacity-not-allowed);
 	}
 
 	&:not(:disabled):active {
