--- a/core/design-system/src/styles/theme-dark.css
+++ b/core/design-system/src/styles/theme-dark.css
@@ -2,6 +2,7 @@
 	:root[theme="dark"] {
 		--ds-background-color-primary: var(--ds-color-grey100);
 		--ds-background-color-secondary: var(--ds-color-grey100);
+		--ds-background-color-tertiary: var(--ds-color-grey200);
 		--ds-background-color-modal-header: linear-gradient(
 			90deg,
 			var(--ds-color-blue600),
@@ -11,6 +12,7 @@
 
 		--ds-text-color-primary: var(--ds-color-grey500);
 		--ds-text-color-secondary: var(--ds-color-grey500);
+		--ds-text-color-tertiary: var(--ds-color-black100);
 
 		--ds-border-field-inner: inset -1px -1px var(--ds-color-grey300), inset 1px
 			1px var(--ds-color-black100);
@@ -27,7 +29,7 @@
 
 		--ds-border-color-primary: var(--ds-color-grey300);
 		--ds-border-color-secondary: var(--ds-color-grey400);
-		--ds-border-color-navigation: var(--ds-color-grey300);
+		--ds-border-color-tertiary: var(--ds-color-grey100);
 
 		--ds-border-field: var(--ds-border-field-inner),
 			var(--ds-border-field-outer);
