fix(mf): snapshot - styles

--- a/micro-frontends/src/mf-snapshot/src/ui/modules/wrapper/wrapper.module.css
+++ b/micro-frontends/src/mf-snapshot/src/ui/modules/wrapper/wrapper.module.css
@@ -1,5 +1,6 @@
 .wrapper {
-	display: grid;
+	display: flex;
 	row-gap: var(--ds-spacing-sm);
-	width: 200px;
+	min-width: 200px;
+	flex-direction: column;
 }
