update(mf): biomejs 1.9.4 > 2.3.8 and lint files

--- a/micro-frontends/src/mf-start-menu/src/ui/modules/button-start/button-start.module.css
+++ b/micro-frontends/src/mf-start-menu/src/ui/modules/button-start/button-start.module.css
@@ -1,5 +1,5 @@
+/** biome-ignore-all lint/complexity/noImportantStyles: TODO resolve these !important problem */
 .button-start {
-	/* @TODO: from copilot - This code is temporary and should be removed after migration to panda CSS */
 	font-family: var(--ds-font-sans-serif-bold) !important;
 	font-size: 11px !important;
 	line-height: 11px !important;
