--- a/micro-frontends/src/mf-case-converter/src/ui/modules/case-box/case-box.module.css
+++ b/micro-frontends/src/mf-case-converter/src/ui/modules/case-box/case-box.module.css
@@ -1,3 +1,4 @@
+/** biome-ignore-all lint/complexity/noImportantStyles: TODO resolve these !important problem */
 .frame {
 	margin: var(--ds-spacing-xs) !important;
 }
