style(mf): system-information - scroll container

--- a/micro-frontends/src/mf-system-information/src/ui/modules/wrapper/wrapper.module.css
+++ b/micro-frontends/src/mf-system-information/src/ui/modules/wrapper/wrapper.module.css
@@ -1,5 +1,6 @@
 .wrapper {
 	background-color: var(--ds-background-color-primary);
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	overflow: auto;
+	scroll-behavior: smooth;
+	height: 310px;
 }
