fix(ds): select - disabled styles

--- a/core/design-system/src/components/ds-select/ds-select.module.css
+++ b/core/design-system/src/components/ds-select/ds-select.module.css
@@ -36,6 +36,13 @@
 		color: var(--ds-text-color-primary);
 		min-width: 46px;
 	}
+
+	&[data-state="disabled"],
+	&[data-state="disabled"] > label {
+		pointer-events: none;
+		opacity: var(--ds-opacity-not-allowed);
+		cursor: not-allowed;
+	}
 }
 
 .arrow {
